--- a/assets/styles/layout/_fonction.scss
+++ b/assets/styles/layout/_fonction.scss
@@ -3,6 +3,11 @@
     h2 {
         padding: 48px 20px 26px ;
     }
+    .explain {
+        display: flex;
+        flex-direction: column;
+        margin-left: 25px;
+    
     .explain1 {
         position: relative;
         display: flex;
@@ -13,8 +18,8 @@
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
         border-radius: 20px;
         margin-bottom: 25px;
-        margin-left: 32px;
-        width: 85%;
+        width: 95%;
+        max-width: 700px;
         height: 72px;
         &:first-child::before { 
             @include beforeFonction ;
@@ -40,6 +45,6 @@
         .fa-solid{
             font-size : 20px; 
         }
-        
+        }
     }
 }
