--- a/assets/styles/layout/_header.scss
+++ b/assets/styles/layout/_header.scss
@@ -26,11 +26,15 @@ header {
             font-size: 24px;
             font-weight: 700;
             padding-top: 39px;
+            width: 75%;
+            margin: 0 auto;
         }
         p{
             color : $gray ;
             font-size: 18px;
-            margin: 12px 0 27px;
+            margin: 12px auto 27px;
+            width: 87%;
+            
         }
         button {
             @include button ;
