--- a/assets/styles/_setting.scss
+++ b/assets/styles/_setting.scss
@@ -73,18 +73,19 @@ $green:#008766;
 @mixin footer {
     position: relative;
     display: flex;
-    
+    font-weight: 900;
     gap: 16px;
     justify-content: flex-end;
     flex-direction: column-reverse;
     width: 100%;
-    height: 186px;
+    // height: 186px;
 }
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: "roboto" , sans-serif;
+    text-decoration: none;
 }
 
 input[type="checkbox"] {
