--- a/assets/styles/layout/_footer.scss
+++ b/assets/styles/layout/_footer.scss
@@ -8,21 +8,25 @@ footer {
         font-family: $title;
         font-size: 18px;
         font-style: italic;
+        font-weight: 400;
     }
-    .link{
-        display: flex;
-        flex-direction: column;
-        gap: 7px;
-        .propose {
-            display: flex;
-        }
-        .partner {
-            display: flex;
-        }
-        i {
-            margin-right: 11px;
-        }
-    }   
+    .link{ 
+        ul{
+           list-style: none;
+            li {
+                padding: 5px 0 5px 0;
+                .partner i{
+                    margin-right: 6px;
+                }
+            }
+           a {
+            color: white;
+                i {
+                margin-right: 11px;
+                }
+            }
+        }  
+    }
  }
  @media (min-width: 767px) {
     footer {
