format mobile / tablette / desktop fait ( vérifier quand même ) Effet au clic fait, faire une transition sur le coeur

--- a/assets/styles/_setting.scss
+++ b/assets/styles/_setting.scss
@@ -88,18 +88,11 @@ $green:#008766;
     text-decoration: none;
 }
 label i{
-    transition: 2s;
+    // transition: 2s;
 }
 input[type="checkbox"] {
     display: none;
 }
-input[type="checkbox"]:checked + label i {
-    background: linear-gradient( #9356DC, #FF79DA);
-    background-clip: text;
-    color: transparent;
-    transform: scale(1.1);
-    
-   }
    .fa-heart {                        
     color: transparent;
     -webkit-text-stroke-width: 1px;
