--- a/assets/styles/layout/pages/laPalette/_main1.scss
+++ b/assets/styles/layout/pages/laPalette/_main1.scss
@@ -8,15 +8,33 @@
     border-radius: 25px ;
     display: flex;
     flex-direction: column;
+    max-width: 1050px;
+    .card-menus {
+        display: flex;
+        align-items: center;
+        
+        label {
+            display: flex;
+            width: 100%;
+        }
+    }
 
     input[type="checkbox"]:checked + label span{
         transform: translateX(-50px);
     
-   #valid {
-        transform: translate(-50px);
-        background: $cyan1;
-    }
-}
+   }
+    input[type="checkbox"]:checked + label #valid{
+            
+                transform: translate(-50px);
+                background: $cyan1;
+                i {
+                    background: white;
+                    color: $cyan1;
+                }
+        }
+
+        
+
     h2 {
         font-family: $title;
         font-style: italic;
@@ -26,7 +44,12 @@
     .card-menu1-head {
         display: flex;
         align-items: center;
-        
+        input[type="checkbox"]:checked + label .fa-heart {
+            background: linear-gradient( #9356DC, #FF79DA);
+            background-clip: text;
+            color: transparent;
+            transform: scale(1.1);
+           }
         label {
             position: absolute;
             top: 40px;
@@ -51,23 +74,18 @@
                 left: 0;
                 top: 27px;
             }
-            input[type="checkbox"]:checked + label span{
-                transform: translateX(-50px);
-            
-          
-        }
-        input[type="checkbox"]:checked + label #valid{
-            
-            display: inline;
-                transform: translate(-50px);
-                background: $cyan1;
+           
+        input[type="checkbox"]:checked + label #valid i{
+            background: white;
+            color: $cyan1;
         }
         .card-menus {
             display: flex;
             align-items: center;
-            transition: 0.5s;
-           
             
+            label {
+                display: flex;
+            }
         }}
         .card-menu {
             width: 100%;
@@ -75,7 +93,7 @@
             box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
             border-radius: 15.0431px;
             display: grid;
-            grid-template-columns: 90% 10%;
+            grid-template-columns: 95% 5%;
             grid-template-areas: "a1  a1"
             "a2  a3";
             padding: 15px;
@@ -92,18 +110,19 @@
             span{
                 grid-area: a3;
                 font-weight: 700;
-                transition: 0.5s;
+                transition: 0.4s;
             
             }
            
         }
     #valid {
         
-        display: none;
+        background: var(--gray1);
         width: 59px;
         height: 77px;
         border-radius: 0 15px 15px 0;
-        transition: 0.5s;
+        transition: 0.4s;
+        display: flex;
         justify-content: center;
         align-items: center;   
         i {
@@ -137,5 +156,24 @@
         width: 634px;
     }
 }
+ }
+ @media (min-width: 1050px) {
+    .card-menu1-head {
+        justify-content: center;
+        label{
+            position: static;
+            margin-left: 30px;
+        }
+    }
+        .card-choice{
+            align-items: center;  
+             text-align: left;
+        .plat{
+           width: 634px ;
+        }
+            .card-menus {
+                width: 634px;
+            }
+        } 
  }
 }
