ajout d'un effet au chargement de la page, a travailler encore

--- a/assets/styles/_setting.scss
+++ b/assets/styles/_setting.scss
@@ -88,7 +88,7 @@ $green:#008766;
     text-decoration: none;
 }
 label i{
-    // transition: 2s;
+    transition: 0.5s;
 }
 input[type="checkbox"] {
     display: none;
@@ -113,7 +113,26 @@ body {
     margin: 0 auto;
     font-family: $font1;
     height: 100%;
+    &:before{
+        content: "";
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        top: 0;
+        left: 0;
+        background: $purple;
+        animation: anim 5s forwards;
+        animation-delay: 0.25s;
+        z-index: 3;        
 
+        @keyframes anim {
+            to {
+                opacity: 0;
+                z-index: -2;
+            }
+            
+        }
+    }
 img {
     width: 100%;
     background: center/cover;
