--- a/assets/styles/_setting.scss
+++ b/assets/styles/_setting.scss
@@ -80,6 +80,28 @@ $green:#008766;
     width: 100%;
     // height: 186px;
 }
+@keyframes loader {
+    0% {
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
+    50%{
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+    100% {
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
+}
+@keyframes like {
+    from {
+        background-position-y: 25px ;
+        background-repeat: no-repeat;
+    }
+    to {
+        background-position-y: 0px;
+        background-repeat: no-repeat;
+    }
+    
+}
 * {
     padding: 0;
     margin: 0;
@@ -113,29 +135,47 @@ body {
     margin: 0 auto;
     font-family: $font1;
     height: 100%;
-    &:before{
-        content: "";
+    .loading{
+        
         position: absolute;
         height: 100%;
         width: 100%;
         top: 0;
         left: 0;
-        background: $purple;
-        animation: anim 5s forwards;
+        background: rgba(147, 86, 220, 0.7) ;
+        z-index: 1;
+        animation: anim 3s forwards;
         animation-delay: 0.25s;
-        z-index: 3;        
+              
 
         @keyframes anim {
-            to {
-                opacity: 0;
-                z-index: -2;
-            }
+           0%{
+            z-index: 1;
+           } 
+           99% {
+            z-index: 1;
+           }
+           100% {
+            z-index: -2;
+           }
+          
             
         }
+    }
+    #load {
+        position: absolute;
+        height: 100px;
+        width: 100px;
+        filter: drop-shadow(0px 6px 3px $cyan1);
+        top: 50%;
+        left: 50%;
+        animation: loader 3s 2 both;
     }
 img {
     width: 100%;
     background: center/cover;
+    
+    
 }
 main {
     width: 100%;
