--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -6,6 +6,27 @@
   font-family: "shrikhand";
   src: url(../fonts/Shrikhand-Regular.ttf);
 }
+@keyframes loader {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  50% {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+}
+@keyframes like {
+  from {
+    background-position-y: 25px;
+    background-repeat: no-repeat;
+  }
+  to {
+    background-position-y: 0px;
+    background-repeat: no-repeat;
+  }
+}
 * {
   padding: 0;
   margin: 0;
@@ -44,23 +65,36 @@ body {
   font-family: allura, sans-serif;
   height: 100%;
 }
-body:before {
-  content: "";
+body .loading {
   position: absolute;
   height: 100%;
   width: 100%;
   top: 0;
   left: 0;
-  background: #9356DC;
-  animation: anim 5s forwards;
+  background: rgba(147, 86, 220, 0.7);
+  z-index: 1;
+  animation: anim 3s forwards;
   animation-delay: 0.25s;
-  z-index: 3;
 }
 @keyframes anim {
-  to {
-    opacity: 0;
+  0% {
+    z-index: 1;
+  }
+  99% {
+    z-index: 1;
+  }
+  100% {
     z-index: -2;
   }
+}
+body #load {
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  filter: drop-shadow(0px 6px 3px #99e2d0);
+  top: 50%;
+  left: 50%;
+  animation: loader 3s 2 both;
 }
 body img {
   width: 100%;
@@ -73,6 +107,7 @@ body main {
 header {
   text-align: center;
   width: 100%;
+  background: white;
 }
 header img {
   width: 162px;
@@ -133,7 +168,8 @@ header .header button:hover {
 }
 
 .fonction {
-  margin-bottom: 67px;
+  padding-bottom: 67px;
+  background: white;
 }
 .fonction h2 {
   padding: 48px 20px 26px;
@@ -217,7 +253,7 @@ header .header button:hover {
 
 @media (min-width: 1440px) {
   .fonction {
-    margin-bottom: 50px;
+    padding-bottom: 50px;
   }
   .fonction h2 {
     max-width: 1200px;
@@ -285,6 +321,7 @@ header .header button:hover {
           background-clip: text;
   color: transparent;
   transform: scale(1.1);
+  animation: like 0.5s linear forwards;
 }
 .restaurant .restaurants .card .card1 label {
   position: absolute;
@@ -493,6 +530,7 @@ footer .link ul a i {
           background-clip: text;
   color: transparent;
   transform: scale(1.1);
+  animation: like 0.5s linear forwards;
 }
 .card-menu1 .card-menu1-head label {
   position: absolute;
