--- a/assets/styles/layout/_fonction.scss
+++ b/assets/styles/layout/_fonction.scss
@@ -1,5 +1,6 @@
 .fonction {
-    margin-bottom: 67px;
+    padding-bottom: 67px;
+    background: white;
     h2 {
         padding: 48px 20px 26px ;
     }
@@ -56,7 +57,7 @@
 }
 @media (min-width: 1440px) { 
     .fonction {
-        margin-bottom: 50px;
+        padding-bottom: 50px;
      h2{
         max-width: 1200px;
         margin: auto;
