--- a/assets/styles/layout/_header.scss
+++ b/assets/styles/layout/_header.scss
@@ -2,6 +2,7 @@
 header {
     text-align: center;
     width: 100%;
+    background: white;
      img{
         width: 162px;
         display: block;
