--- a/assets/styles/layout/_restaurants.scss
+++ b/assets/styles/layout/_restaurants.scss
@@ -44,6 +44,7 @@
                 background-clip: text;
                 color: transparent;
                 transform: scale(1.1);
+                animation: like 0.5s linear forwards;
                }
             label {
                 position: absolute;
