--- a/assets/styles/_setting.scss
+++ b/assets/styles/_setting.scss
@@ -91,7 +91,7 @@ $green:#008766;
         transform: translate(-50%, -50%) rotate(0deg);
     }
 }
-@keyframes like {
+@keyframes like { // permet de mettre la couleur de fond qui se rempli progressivement.
     from {
         background-position-y: 25px ;
         background-repeat: no-repeat;
@@ -101,6 +101,16 @@ $green:#008766;
         background-repeat: no-repeat;
     }
     
+}
+@keyframes entree {
+    from {
+        opacity: 0;
+        transform: translateX(-50%);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0%);
+    }
 }
 * {
     padding: 0;
