--- a/assets/styles/layout/pages/laPalette/_main1.scss
+++ b/assets/styles/layout/pages/laPalette/_main1.scss
@@ -9,6 +9,24 @@
     display: flex;
     flex-direction: column;
     max-width: 1050px;
+    .card-entree {
+        animation: entree 1s forwards;
+        gap: 13px;
+        display: flex;
+        flex-direction: column;
+    }
+    .card-plat {
+        animation: entree 2s  forwards;
+        gap: 13px;
+        display: flex;
+        flex-direction: column;
+    }
+    .card-dessert {
+        animation: entree 3s forwards;
+        gap: 13px;
+        display: flex;
+        flex-direction: column;
+    }
     .card-menus {
         display: flex;
         align-items: center;
@@ -94,7 +112,7 @@
             box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
             border-radius: 15.0431px;
             display: grid;
-            grid-template-columns: 95% 5%;
+            grid-template-columns: 90% 10%;
             grid-template-areas: "a1  a1"
             "a2  a3";
             padding: 15px;
@@ -112,6 +130,7 @@
                 grid-area: a3;
                 font-weight: 700;
                 transition: 0.4s;
+                
             
             }
            
@@ -147,18 +166,25 @@
 
 
  @media (min-width: 767px) {
-    .card-menu1 {
+    
     align-items: center;
     .card-menu1-head label {
         position: static;
         margin-left: 24px;
     }
-    .card-choice .card-menu{
+    .card-choice{
+        
+    .card-menu{
         width: 634px;
+        display: grid;
+        grid-template-columns: 95% 5%;
     }
+ }
+    
 }
  }
  @media (min-width: 1050px) {
+
     .card-menu1-head {
         justify-content: center;
         label{
@@ -177,4 +203,3 @@
             }
         } 
  }
-}
