--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -64,6 +64,7 @@ label i {
 }
 
 body {
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -112,6 +113,15 @@ body img {
 }
 body main {
   width: 100%;
+}
+body .fa-heart:hover {
+  cursor: pointer;
+}
+body .card:hover {
+  cursor: pointer;
+}
+body .card-menu:hover {
+  cursor: pointer;
 }
 
 header {
@@ -452,8 +462,9 @@ footer .link ul a i {
     justify-content: space-around;
     align-items: center;
   }
-  footer #font {
-    font-size: 28px;
+  footer ul {
+    display: flex;
+    gap: 13px;
   }
 }
 @media (min-width: 1440px) {
@@ -526,6 +537,7 @@ footer .link ul a i {
 .card-menu1 .card-menus {
   display: flex;
   align-items: center;
+  width: 108%;
 }
 .card-menu1 .card-menus label {
   display: flex;
@@ -533,6 +545,9 @@ footer .link ul a i {
 }
 .card-menu1 input[type=checkbox]:checked + label span {
   transform: translateX(-50px);
+}
+.card-menu1 input[type=checkbox]:checked + label p, .card-menu1 input[type=checkbox]:checked + label h3 {
+  width: 75%;
 }
 .card-menu1 input[type=checkbox]:checked + label #valid {
   transform: translate(-50px);
@@ -611,10 +626,16 @@ footer .link ul a i {
   grid-area: a1;
   font-weight: 500;
   font-size: 18px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .card-menu1 .card-choice .card-menu p {
   grid-area: a2;
   font-size: 15px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .card-menu1 .card-choice .card-menu span {
   grid-area: a3;
